Fixing label truncation and scrolling

--- a/src/client/js/PanelBase/styles/PanelBaseWithHeader.scss
+++ b/src/client/js/PanelBase/styles/PanelBaseWithHeader.scss
@@ -116,7 +116,6 @@ $panel-header-title-font-size: 0.85em;
 
   .panel-body {
     position: relative;
-    overflow: auto;
     background-color: $panel-body-background-color;
   }
 
