--- a/src/client/js/Widgets/PartBrowser/styles/PartBrowserWidget.scss
+++ b/src/client/js/Widgets/PartBrowser/styles/PartBrowserWidget.scss
@@ -1,9 +1,11 @@
 $part-browser-li-margin-top: 15px;
 
 .part-browser {
+  height: 100%;
+  width: 100%;
   text-align: center;
-  overflow-x: visible;
-  overflow-y: visible;
+  overflow-x: auto;
+  overflow-y: auto;
 
   > ul {
     list-style-type: none;
@@ -30,6 +32,8 @@ $part-browser-li-margin-top: 15px;
         color: #3160AB;
         width: 100%;
         height: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       div.name-part:hover{
         text-decoration: underline;
